--- a/app/views/articles/article.pug
+++ b/app/views/articles/article.pug
@@ -1,23 +1,44 @@
 article.article
-  h3
-    a(href='/articles/'+article._id, title=article.title) #{article.title.slice(0, 140)}
-  p= article.body.slice(0, 400)
+  h4=article.title
+  .panel.panel-default
+    .panel-heading
+      a.pull-right(href='#') View all
+      .panel-body
+        img.img-circle.pull-right(src='https://usebootstrap.com/preview/facebook/assets/img/150x150.gif')
+        a(href='/articles/'+article._id, title=article.title) #{article.title.slice(0, 140)})
+        .clearfix
+        hr
+        p= article.body.slice(0, 400)
+        code=article.title
+        //- |  tag at 
+        //- a(href='http://stackoverflow.com/questions/tagged/twitter-bootstrap')=article.tag
+        form
+          .input-group
+            .input-group-btn
+              button.btn.btn-default +1
+              button.btn.btn-default
+                i.glyphicon.glyphicon-share
+            input.form-control(placeholder='Add a comment..', type='text')
 
-  .meta
-    span.text-muted= formatDate(article.createdAt)
+  //- h3
+    //- a(href='/articles/'+article._id, title=article.title) #{article.title.slice(0, 140)}
+  //- p= article.body.slice(0, 400)
 
-    - if (article.user)
-      | &nbsp; - &nbsp;
-      span Author &nbsp;
+  //- .meta
+  //-   span.text-muted= formatDate(article.createdAt)
 
-      - var name = article.user.name ? article.user.name : article.user.username
+  //-   - if (article.user)
+  //-     | &nbsp; - &nbsp;
+  //-     span Author &nbsp;
 
-      a(href="/users/"+article.user._id)= name
+  //-     - var name = article.user.name ? article.user.name : article.user.username
 
-    - if (article.tags)
-      | &nbsp; - &nbsp;
-      span Tags &nbsp;
-      each tag in article.tags.split(',').slice(0, 10)
-        i.text-muted.fa.fa-tag &nbsp;
-        a.tag(href="/tags/"+tag)= tag
-        | &nbsp;&nbsp;
+  //-     a(href="/users/"+article.user._id)= name
+
+  //-   - if (article.tags)
+  //-     | &nbsp; - &nbsp;
+  //-     span Tags &nbsp;
+  //-     each tag in article.tags.split(',').slice(0, 10)
+  //-       i.text-muted.fa.fa-tag &nbsp;
+  //-       a.tag(href="/tags/"+tag)= tag
+  //-       | &nbsp;&nbsp;
