--- a/app/views/includes/foot.pug
+++ b/app/views/includes/foot.pug
@@ -1,6 +1,15 @@
-script(src="http://code.jquery.com/jquery-1.10.2.min.js")
-script(src="/js/bootstrap.min.js")
-script(src="/js/jquery.tagsinput.min.js")
-script(src="/js/app.js")
+script(src="assets/js/jquery.js")
+script(src="assets/js/bootstrap.js")
+//- script($(document).ready(function() {
+//-             $('[data-toggle=offcanvas]').click(function() {
+//-                 $(this).toggleClass('visible-xs text-center');
+//-                 $(this).find('i').toggleClass('glyphicon-chevron-right glyphicon-chevron-left');
+//-                 $('.row-offcanvas').toggleClass('active');
+//-                 $('#lg-menu').toggleClass('hidden-xs').toggleClass('visible-xs');
+//-                 $('#xs-menu').toggleClass('visible-xs').toggleClass('hidden-xs');
+//-                 $('#btnShow').toggle();
+//-             });
+//-         });    
+//-     )
 
 block foot
