--- a/app/views/articles/index.pug
+++ b/app/views/articles/index.pug
@@ -5,10 +5,10 @@ html(lang='en')
     meta(charset='utf-8')
     title Facebook Theme Demo
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    link(href='https://usebootstrap.com/preview/facebook/assets/css/bootstrap.css', rel='stylesheet')
-    link(href='https://usebootstrap.com/preview/facebook/assets/css/facebook.css', rel='stylesheet')
-    //- link(href='./assets/css/bootstrap.css', rel='stylesheet')    
-    //- link(href='./assets/css/facebook.css', rel='stylesheet')
+    //-link(href='https://usebootstrap.com/preview/facebook/assets/css/bootstrap.css', rel='stylesheet')
+    //-link(href='https://usebootstrap.com/preview/facebook/assets/css/facebook.css', rel='stylesheet')
+    link(href='/css/bootstrap.css', rel='stylesheet')    
+    link(href='/css/facebook.css', rel='stylesheet')
 
   body
     .wrapper
