--- a/app/views/articles/index.pug
+++ b/app/views/articles/index.pug
@@ -5,8 +5,6 @@ html(lang='en')
     meta(charset='utf-8')
     title Facebook Theme Demo
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    //-link(href='https://usebootstrap.com/preview/facebook/assets/css/bootstrap.css', rel='stylesheet')
-    //-link(href='https://usebootstrap.com/preview/facebook/assets/css/facebook.css', rel='stylesheet')
     link(href='/css/bootstrap.css', rel='stylesheet')    
     link(href='/css/facebook.css', rel='stylesheet')
 
@@ -86,8 +84,8 @@ html(lang='en')
                       i.glyphicon.glyphicon-plus
                       |  Post
                   li
-                    a(href='#')
-                      span.badge badge
+                    a(href='/templates')
+                      span.badge Шаблоны
                 ul.nav.navbar-nav.navbar-right
                   li.dropdown
                     a.dropdown-toggle(href='#', data-toggle='dropdown')
@@ -109,69 +107,6 @@ html(lang='en')
                 // content
                 .row
                   // main col left
-                  .col-sm-5
-                    .panel.panel-default
-                      .panel-thumbnail
-                        img.img-responsive(src='https://usebootstrap.com/preview/facebook/assets/img/bg_5.jpg')
-                      .panel-body
-                        p.lead Urbanization
-                        p 45 Followers, 13 Posts
-                        p
-                          img(src='https://usebootstrap.com/preview/facebook/assets/img/bg_5.jpg', height='28px', width='28px')
-                    .panel.panel-default
-                      .panel-heading
-                        a.pull-right(href='#') View all
-                        h4 Bootstrap Examples
-                      .panel-body
-                        .list-group
-                          a.list-group-item(href='http://usebootstrap.com/theme/facebook/assets/img/photo.jpg') Modal / Dialog
-                          a.list-group-item(href='http://usebootstrap.com/theme/facebook/assets/img/photo.png') Datetime Examples
-                          a.list-group-item(href='http://usebootstrap.com/theme/facebook/assets/img/photo_002.jpg') Data Grids
-                    .well
-                      form.form-horizontal(role='form')
-                        h4 What's New
-                        .form-group(style='padding:14px;')
-                          textarea.form-control(placeholder='Update your status')
-                        button.btn.btn-primary.pull-right(type='button') Post
-                        ul.list-inline
-                          li
-                            a(href='')
-                              i.glyphicon.glyphicon-upload
-                          li
-                            a(href='')
-                              i.glyphicon.glyphicon-camera
-                          li
-                            a(href='')
-                              i.glyphicon.glyphicon-map-marker
-                    .panel.panel-default
-                      .panel-heading
-                        a.pull-right(href='#') View all
-                        h4 More Templates
-                      .panel-body
-                        img.img-circle.pull-right(src='https://usebootstrap.com/preview/facebook/assets/img/150x150.gif')
-                        a(href='#') Free @Bootply
-                        .clearfix
-                        | 											There a load of new free Bootstrap 3
-                        | 		 ready templates at Bootply. All of these templates are free and don't 
-                        | 		require extensive customization to the Bootstrap baseline.
-                        hr
-                        ul.list-unstyled
-                          li
-                            a(href='http://usebootstrap.com/theme/facebook') Dashboard
-                          li
-                            a(href='http://usebootstrap.com/theme/facebook') Darkside
-                          li
-                            a(href='http://usebootstrap.com/theme/facebook') Greenfield
-                    .panel.panel-default
-                      .panel-heading
-                        h4 What Is Bootstrap?
-                      .panel-body
-                        | Bootstrap is front end frameworkto
-                        | build custom web applications that are fast, responsive & intuitive.
-                        | It consist of CSS and HTML for typography, forms, buttons, tables,
-                        | grids, and navigation along with custom-built jQuery plug-ins and
-                        | support for responsive layouts. With dozens of reusable components for
-                        | navigation, pagination, labels, alerts etc..
                   // main col right
                   .col-sm-7
                     //- .well
@@ -205,66 +140,7 @@ html(lang='en')
                       - else
                         h4.text-muted No articles.&nbsp;
                           a(href="/articles/new") create one
-
                     
-                    //- .panel.panel-default
-                    //-   .panel-heading
-                    //-     a.pull-right(href='#') View all
-                    //-     h4 Stackoverflow
-                    //-   .panel-body
-                    //-     img.img-circle.pull-right(src='https://usebootstrap.com/preview/facebook/assets/img/150x150.gif')
-                    //-     a(href='#') Keyword: Bootstrap
-                    //-     .clearfix
-                    //-     hr
-                    //-     p
-                    //-       | If you're looking for help with Bootstrap code, the 
-                    //-       code twitter-bootstrap
-                    //-       |  tag at 
-                    //-       a(href='http://stackoverflow.com/questions/tagged/twitter-bootstrap') Stackoverflow
-                    //-       |  is a good place to find answers.
-                    //-     hr
-                    //-     form
-                    //-       .input-group
-                    //-         .input-group-btn
-                    //-           button.btn.btn-default +1
-                    //-           button.btn.btn-default
-                    //-             i.glyphicon.glyphicon-share
-                    //-         input.form-control(placeholder='Add a comment..', type='text')
-                    //- .panel.panel-default
-                    //-   .panel-heading
-                    //-     a.pull-right(href='#') View all
-                    //-     h4 Bootply Editor & Code Library
-                    //-   .panel-body
-                    //-     p
-                    //-       img.img-circle.pull-right(src='https://usebootstrap.com/preview/facebook/assets/img/150x150.gif')
-                    //-       a(href='#') The Bootstrap Playground
-                    //-     .clearfix
-                    //-     hr
-                    //-     | 											Design, build, test, and prototype
-                    //-     | 		using Bootstrap in real-time from your Web browser. Bootply combines the
-                    //-     | 		 power of hand-coded HTML, CSS and JavaScript with the benefits of
-                    //-     | 		responsive design using Bootstrap. Find and showcase Bootstrap-ready
-                    //-     | 		snippets in the 100% free Bootply.com code repository.
-
-                    //- .panel.panel-default
-                    //-   .panel-heading
-                    //-     a.pull-right(href='#') View all
-                    //-     h4 Portlet Heading
-                    //-   .panel-body
-                    //-     ul.list-group
-                    //-       li.list-group-item Modals
-                    //-       li.list-group-item Sliders / Carousel
-                    //-       li.list-group-item Thumbnails
-                    //- .panel.panel-default
-                    //-   .panel-thumbnail
-                    //-     img.img-responsive(src='https://usebootstrap.com/preview/facebook/assets/img/bg_4.jpg')
-                    //-   .panel-body
-                    //-     p.lead Social Good
-                    //-     p 1,200 Followers, 83 Posts
-                    //-     p
-                    //-       img(src='https://usebootstrap.com/preview/facebook/assets/img/photo.jpg', height='28px', width='28px')
-                    //-       img(src='https://usebootstrap.com/preview/facebook/assets/img/photo.png', height='28px', width='28px')
-                    //-       img(src='https://usebootstrap.com/preview/facebook/assets/img/photo_002.jpg', height='28px', width='28px')
                 // /row
                 .row
                   .col-sm-6
@@ -311,14 +187,3 @@ html(lang='en')
                               i.glyphicon.glyphicon-map-marker
               script(type='text/javascript', src='https://usebootstrap.com/preview/facebook/assets/js/jquery.js')
               script(type='text/javascript', src='https://usebootstrap.com/preview/facebook/assets/js/bootstrap.js')
-              //- script(type='text/javascript').
-              //-   $(document).ready(function() {
-              //-   $('[data-toggle=offcanvas]').click(function() {
-              //-   $(this).toggleClass('visible-xs text-center');
-              //-   $(this).find('i').toggleClass('glyphicon-chevron-right glyphicon-chevron-left');
-              //-   $('.row-offcanvas').toggleClass('active');
-              //-   $('#lg-menu').toggleClass('hidden-xs').toggleClass('visible-xs');
-              //-   $('#xs-menu').toggleClass('visible-xs').toggleClass('hidden-xs');
-              //-   $('#btnShow').toggle();
-              //-   });
-              //-   });
