начал добавлять шаблоны

--- a/app/views/articles/index.pug
+++ b/app/views/articles/index.pug
@@ -86,6 +86,9 @@ html(lang='en')
                   li
                     a(href='/templates')
                       span.badge Шаблоны
+                  li
+                    a(href='/templates/new')
+                      span.badge +шаблон
                 ul.nav.navbar-nav.navbar-right
                   li.dropdown
                     a.dropdown-toggle(href='#', data-toggle='dropdown')
