--- a/app/views/templates/template.pug
+++ b/app/views/templates/template.pug
@@ -1,50 +1,23 @@
-extends ../layouts/default
+article.template
+  h3
+    a(href='/templates/'+template._id, title=template.title) #{template.title.slice(0, 140)}
+  p= template.body.slice(0, 400)
 
-block main
-  h1= title
+  .meta
+    span.text-muted= formatDate(template.createdAt)
 
-block content
-  - var action = '/templates'
-  - action += template.isNew? '' : '/' + template.id
+    - if (template.user)
+      | &nbsp; - &nbsp;
+      span Author &nbsp;
 
-  .row
-    .col-md-8
-      form(method="post", action=action, enctype="multipart/form-data", role="form")
+      - var name = template.user.name ? template.user.name : template.user.username
 
-        input(type="hidden", name="_csrf", value=csrf_token)
+      a(href="/users/"+template.user._id)= name
 
-        - if (!template.isNew)
-          input(type="hidden", name="_method", value="PUT")
-
-        .form-group
-          label(for='title') Name
-          input.form-control#title(type='text', name="title", value=template.title, placeholder='Enter the template name')
-
-        .form-group
-          label(for='desc') Question
-          textarea.form-control#desc(rows="5", name="body", placeholder='Enter the template question')=template.body
-
-        //- .form-group
-        //-   label(for='tags') Tags
-        //-   input.form-control#tags(type='text', name="tags", value=template.tags, placeholder='Enter the tags')
-
-        .form-group.answers
-          label(for='tags') Answers
-          .input-group
-            .input-group-btn
-              button.btn.btn-default.plus +1
-              button.btn.btn-default
-                i.glyphicon.glyphicon-share
-            input.form-control(placeholder='Add an answer..' type='text')
-
-        .form-group
-          label(for='file') Image
-          input.form-control-file#file(type='file', name="image")
-
-        button.btn.btn-primary(type='submit') Save
-        | &nbsp;
-        a.btn.btn-link(href='/templates', title="cancel") Cancel
-
-    .col-md-4
-      - if (!template.isNew && template.image && template.image.files && template.image.files.length)
-        img(src=template.image.cdnUri + "/mini_" + template.image.files[0])
+    - if (template.tags)
+      | &nbsp; - &nbsp;
+      span Tags &nbsp;
+      each tag in template.tags.split(',').slice(0, 10)
+        i.text-muted.fa.fa-tag &nbsp;
+        a.tag(href="/tags/"+tag)= tag
+        | &nbsp;&nbsp;
