--- a/app/views/templates/show.pug
+++ b/app/views/templates/show.pug
@@ -33,9 +33,9 @@ block content
     input(type="hidden", name="_method", value="DELETE")
     button.btn.btn-link.text-danger(type="submit") Delete
 
-  br
-  h3 Comments
-  each comment, index in template.comments
-    div(class=`py-3 ${index && 'border-top'}`)
-      include ../comments/comment
-  include ../comments/form
+  //- br
+  //- h3 Comments
+  //- each comment, index in template.comments
+  //-   div(class=`py-3 ${index && 'border-top'}`)
+  //-     include ../comments/comment
+  //- include ../comments/form
