--- a/app/views/templates/form.pug
+++ b/app/views/templates/form.pug
@@ -21,17 +21,18 @@ block content
           input.form-control#title(type='text', name="title", value=template.title, placeholder='Enter the title')
 
         .form-group
-          label(for='file') Image
-          input.form-control-file#file(type='file', name="image")
-
-        .form-group
           label(for='desc') Body
-          textarea.form-control#desc(rows="5", name="body", placeholder='Enter the template description')=template.body
+          textarea.form-control#desc(rows="3", name="questionText", placeholder='Enter the template description')=template.body
+
+        input.form-group(type='button', value='+question')
 
         .form-group
           label(for='tags') Tags
           input.form-control#tags(type='text', name="tags", value=template.tags, placeholder='Enter the tags')
 
+        .form-group
+          label(for='file') Image
+          input.form-control-file#file(type='file', name="image")
         
         button.btn.btn-primary(type='submit') Save
         | &nbsp;
