--- a/app/views/layouts/default.pug
+++ b/app/views/layouts/default.pug
@@ -12,3 +12,4 @@ html(lang="en")
         block content
     include ../includes/footer.pug
     include ../includes/foot.pug
+    script(src='/js/templateForm.js')
