--- a/app/views/templates/form.pug
+++ b/app/views/templates/form.pug
@@ -22,12 +22,12 @@ block content
 
         .form-group
           label(for='desc') Body
-          textarea.form-control#desc(rows="3", name="description", placeholder='Enter the template description')=template.body
+          textarea.form-control#desc(rows="3", name="body", placeholder='Enter the template description')=template.body
 
         .form-group
           label(for='questions') Questions
           .form-group.question(style='border-style:solid;border-width:3px;border-color:red;padding-left: 15px;')
-            textarea.form-control.question(rows="2", name="questionText", placeholder='Enter the question')=template.body
+            textarea.form-control.question(rows="2", name="question", placeholder='Enter the question')=template.body
             .form-group.answers
               label(for='answers') Answers
               .input-group.answer( style='padding-left: 15px;')
