--- a/app/views/templates/form.pug
+++ b/app/views/templates/form.pug
@@ -27,7 +27,7 @@ block content
         .form-group
           label(for='questions') Questions
           .form-group.question(style='border-style:solid;border-width:3px;border-color:red;padding-left: 15px;')
-            textarea.form-control.question(rows="2", name="question", placeholder='Enter the question')=template.body
+            textarea.form-control.question(rows="2", name="questions", placeholder='Enter the question')=template.body
             .form-group.answers
               label(for='answers') Answers
               .input-group.answer( style='padding-left: 15px;')
