--- a/app/views/includes/head.pug
+++ b/app/views/includes/head.pug
@@ -11,7 +11,7 @@ head(prefix="og: http://ogp.me/ns# nodejsexpressdemo: http://ogp.me/ns/apps/node
   meta(property="og:title", content=pkg.name + ' - ' + title)
   meta(property="og:description", content=pkg.description)
   meta(property="og:url", content="http://nodejs-express-demo.herokuapp.com")
-  meta(property="og:site_name", content="Node.js Express Mongoose Demo")
+  meta(property="og:site_name", content="Node.js Vetbook")
   meta(property="fb:admins", content="1037213945")
 
   block head
