--- a/app/views/doctors/index.pug
+++ b/app/views/doctors/index.pug
@@ -2,6 +2,7 @@ extends ../layouts/default
 
 block main
   h1= title
+  a.nav-link(href='/doctors/new', title='add doctor') +doctor
 
 block content
   - if (doctors.length)
