--- a/app/views/includes/header.pug
+++ b/app/views/includes/header.pug
@@ -1,5 +1,5 @@
 nav.navbar.navbar-expand-md.navbar-dark.fixed-top.bg-dark
-  a.navbar-brand(href='/') Node.js Express Mongoose Demo
+  a.navbar-brand(href='/') Node.js Vetbook
   button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarCollapse' aria-controls='navbarCollapse' aria-expanded='false' aria-label='Toggle navigation')
     span.navbar-toggler-icon
   #navbarCollapse.collapse.navbar-collapse
@@ -8,10 +8,12 @@ nav.navbar.navbar-expand-md.navbar-dark.fixed-top.bg-dark
         a.nav-link(href="/articles/new", title="new article") +article
       li(class=isActive('/templates') ? 'active nav-item' : 'nav-item')
         a.nav-link(href="/templates", title="templates") Templates
-      li(class=isActive('/templates/new') ? 'active nav-item' : 'nav-item')
-        a.nav-link(href="/templates/new", title="templates") +template
+      //- li(class=isActive('/templates/new') ? 'active nav-item' : 'nav-item')
+      //-   a.nav-link(href="/templates/new", title="templates") +template
       li(class=isActive('/doctors') ? 'active nav-item' : 'nav-item')
-        a.nav-link(href="/doctors", title="templates") Doctors
+        a.nav-link(href="/doctors", title="doctors") Doctors
+      li(class=isActive('/appointments') ? 'active nav-item' : 'nav-item')
+        a.nav-link(href="/appointments", title="appointments") Appointments
       - if (req.isAuthenticated())
         li.nav-item(class=isActive(`/users/${req.user.id}`) && 'active')
           a.nav-link(href="/users/"+req.user.id, title="Profile") Profile
