--- a/app/views/appointments/form.pug
+++ b/app/views/appointments/form.pug
@@ -29,8 +29,15 @@ block content
           input.form-control#email(type='text', name="email", value=appointment.email, placeholder='Enter the email')
 
         .form-group
-          label(for='doctor') doctor
-          input.form-control#doctor(type='text', name="doctor", value=appointment.doctor, placeholder='Choose the doctor')
+          label(for='doctor') Doctor
+          p
+          select(name='doctor')
+            each item in doctors
+              - if (appointment.doctor===item.id)
+                  option(value=item.id selected)=item.name
+              - else
+                  option(value=item.id)=item.name
+            //- input.form-control#doctor(type='text', name="doctor", value=appointment.doctor, placeholder='Choose the doctor')
 
         .form-group
           label(for='datetime') datetime
