--- a/app/views/appointments/form.pug
+++ b/app/views/appointments/form.pug
@@ -30,14 +30,14 @@ block content
 
         .form-group
           label(for='doctor') Doctor
-          p
+          //- p
           select(name='doctor')
             each item in doctors
               - if (appointment.doctor===item.id)
                   option(value=item.id selected)=item.name
               - else
                   option(value=item.id)=item.name
-            //- input.form-control#doctor(type='text', name="doctor", value=appointment.doctor, placeholder='Choose the doctor')
+          input.form-control#doctor(type='text', name="doctor", value=appointment.doctor, placeholder='Choose the doctor')
 
         .form-group
           label(for='datetime') datetime
