save doctor link

--- a/app/views/appointments/appointment.pug
+++ b/app/views/appointments/appointment.pug
@@ -1,7 +1,7 @@
 appointment.appointment
   h3
     a(href='/appointments/'+appointment._id, title=appointment.name) #{appointment.name.slice(0, 140)}
-  p= appointment.doctor.slice(0, 400)
+  p= appointment.doctor
 
   .meta
     span.text-muted= formatDate(appointment.createdAt)
