--- a/app/views/appointments/form.pug
+++ b/app/views/appointments/form.pug
@@ -34,7 +34,7 @@ block content
           //- select(name='doctor')
           input.form-control#doctor(type='text', name="doctor", list='doctor_list', value=appointment.doctor, placeholder='Choose the doctor')
           datalist#doctor_list
-            each item in doctors
+            each item in appointment.doctors
               option(value=item.name data-value=item.id)=item.specialization
 
         .form-group
