--- a/app/views/appointments/appointment.pug
+++ b/app/views/appointments/appointment.pug
@@ -1,7 +1,7 @@
 appointment.appointment
   h3
     a(href='/appointments/'+appointment._id, title=appointment.name) #{appointment.name.slice(0, 140)}
-  p= appointment.doctor
+  p= appointment.doctor.name
 
   .meta
     span.text-muted= formatDate(appointment.createdAt)
