--- a/app/views/pets/show.pug
+++ b/app/views/pets/show.pug
@@ -26,9 +26,12 @@ block content
     input(type="hidden", name="_method", value="DELETE")
     button.btn.btn-link.text-danger(type="submit") Delete
 
-  //- br
-  //- h3 Comments
-  //- each comment, index in pet.comments
-  //-   div(class=`py-3 ${index && 'border-top'}`)
-  //-     include ../comments/comment
-  //- include ../comments/form
+  p
+  //- - if (pet.surveys.length)
+  - if (pet.surveys)
+    each survey, index in pet.surveys
+      div(class=`py-4 ${index && 'border-top'}`)
+        include ../surveys/survey
+  - else
+    h4.text-muted No surveys.&nbsp;
+      a(href="/surveys/new") create one
