--- a/app/views/surveys/form.pug
+++ b/app/views/surveys/form.pug
@@ -21,12 +21,56 @@ block content
           input.form-control#title(type='text', name="title", value=survey.title, placeholder='Enter the title')
 
         .form-group
-          label(for='file') Image
-          input.form-control-file#file(type='file', name="image")
+          label(for='date') Date
+          input.form-control#datetime(type='text', name="datetime", value=survey.datetime, placeholder='Enter the date')
 
         .form-group
-          label(for='desc') Body
+          label(for='owner') Owner
+          - if (survey.owner)
+              input.form-control#owner(type='text', name="owner", list='ownersList', value=survey.owner.name, placeholder='owner')
+          - else
+              input.form-control#owner(type='text', name="owner", placeholder='Choose a owner')
+          datalist#ownersList
+            each item in survey.ownersList
+              option(value=item.name data-value=item.id)=item.name
+
+        .form-group
+          label(for='pet') Pet
+          - if (survey.pet)
+              input.form-control#pet(type='text', name="pet", list='petsList', value=survey.pet.name, placeholder='pet')
+          - else
+              input.form-control#pet(type='text', name="pet", placeholder='Choose a pet')
+          datalist#petsList
+            each item in survey.petsList
+              option(value=item.name data-value=item.id)=item.name
+
+        .form-group
+          label(for='doctor') Owner
+          - if (survey.doctor)
+              input.form-control#doctor(type='text', name="doctor", list='doctorsList', value=survey.doctor.name, placeholder='doctor')
+          - else
+              input.form-control#doctor(type='text', name="doctor", placeholder='Choose a doctor')
+          datalist#doctorsList
+            each item in survey.doctorsList
+              option(value=item.name data-value=item.id)=item.name
+
+        .form-group
+          label(for='desc') Survey description
           textarea.form-control#desc(rows="5", name="body", placeholder='Enter the survey description')=survey.body
+
+        .form-group
+          label(for='questions') questions
+          - if (survey.doctor)
+              input.form-control#doctor(type='text', name="doctor", list='doctorsList', value=survey.doctor.name, placeholder='doctor')
+          - else
+              input.form-control#doctor(type='text', name="doctor", placeholder='Choose a doctor')
+          datalist#doctorsList
+            each item in survey.doctorsList
+              option(value=item.name data-value=item.id)=item.name
+
+        .form-group
+          label(for='file') Image
+          input.form-control-file#file(type='file', name="image")
 
         .form-group
           label(for='tags') Tags
